# dibo-api

./: .env.example  .git-commit-message  .gitignore  BUILD_IMPLEMENTATION.md  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: character_class_data.md
api/: main.py
api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
api/auth/: dependencies.py  middleware.py  models.py  routes.py  schemas.py  service.py
api/builds/: __init__.py  models.py  routes.py  service.py
api/core/: config.py  security.py
api/data/: __init__.py  models.py  routes.py  service.py
api/docs/: endpoints.md  openapi.json
api/routes/: __init__.py
api/services/: builds.py
api/utils/: gists.py
data/indexed/: README.md  build_types.json  constraints.json  metadata.json  stats.json  synergies.json
data/legacy/: Curses.csv  Enchantments.csv  EssenceList.csv  GemRanks.csv  Gems.csv  Reforges.csv  Sets.csv  Skills.csv
data/raw/: Curses.json  Enchantments.json  EssenceList.json  Gems.json  (+4 more)
docs/: build_generation_plan.md  pending_test_implementation.md  skill_scoring_test_progress.md
scripts/: add_metadata.py  check_duplicate_keys.py  check_missing_ranks.py  create_indexed_json-do-not-use.py  create_indexed_json.py  generate_missing_data_report.py  migrate_gems.py  optimize_essences.py  run_tests.py  sort_index.py  test_auth_api.py  test_endpoints.py  test_gist.py  update_gem_files.py  verify_essences.py
tests/: conftest.py  test_api.py  test_auth_flow.py  test_builds.py  test_cors_config.py  test_skill_scoring.py
(+169 files in other folders)
